--- a/src/TerminalSettings/TerminalSettings/Home.xaml
+++ b/src/TerminalSettings/TerminalSettings/Home.xaml
@@ -18,10 +18,12 @@
             <ColumnDefinition Width="1*" />
         </Grid.ColumnDefinitions>
         <TextBlock Grid.Row="0"
-                   Text="Home"
+                   Text="Windows Terminal Settings"
                    Style="{StaticResource HeaderTextBlockStyle}"
-                   Margin="0,0,0,10" />
-        <GridView Grid.Row="1">
+                   TextAlignment="Center"
+                   Margin="0,0,0,20" />
+        <GridView Grid.Row="1"
+                  ItemContainerStyle="{StaticResource GridViewItemStyle}">
             <GridViewItem Height="150" Width="300">
                 <TextBlock Text="Launch" Style="{StaticResource TitleTextBlockStyle}"/>
             </GridViewItem>
